Reviews the build process to correct :bug:
